@@ -2,6 +2,11 @@
   * v2.1 Alpha 1
   **************
 
+    * Bugfix CORE-966
+       Bug in socket binding for database event.
+	Contributor(s):
+        Paul Beach <pbeach at ibphoenix.com> and Dmitry Yemanov <dimitr at firebirdsql.org>
+
     * More dependencies (unregistered)
         Fixed untracked collation dependencies in PSQL
       Contributor(s):
